Update index.html to add filter label and enhance styles in style.css with new font settings, button, and select element styles.

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </header>
     <main>
         <select name="filter" id="products-filter">
-            <option value="" selected></option>
+            <option value="" selected>Filtro</option>
             <option value="genero">Género</option>
             <option value="categoria">Categoría</option>
             <option value="color">Color</option>
