Refactor header layout in index.html and add new styles in header.css for improved design and responsiveness. Set body margin to zero in style.css for consistent spacing.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header>
-        <div>
+        <div class="header__section">
             <div class="search">
                 <input type="search" id="searcher">
                 <button form="searcher">🔍</button>
@@ -26,9 +26,11 @@
             </div>
         </div>
 
-        <h1>Lana & Lino</h1>
+        <div class="title">
+            <h1>Lana <br> <span>&</span> Lino</h1>
+        </div>
 
-        <div>
+        <div class="header__section">
             <nav>
                 <ul>
                     <li>
