Add footer.css and style it

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <section id="products"></section>
     </main>
     <footer>
-        <div>
+        <div class="footer__section">
             <h2>Contacto</h2>
             <ul>
                 <li><span>✉️</span>Mail</li>
@@ -71,7 +71,7 @@
                 <li><span>☎️</span>Teléfono</li>
             </ul>
         </div>
-        <div>
+        <div class="footer__section">
             <h2>Redes Sociales</h2>
             <ul>
                 <li>
@@ -85,7 +85,7 @@
                 </li>
             </ul>
         </div>
-        <div>
+        <div class="footer__section">
             <p>
                 Página desarrollada por: <br>
                 <a href="http://github.com/lavazquezGH" target="_blank" rel="noopener noreferrer">Laila Vazquez</a> & 
