--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="./media/lana-&-lino-icon.svg" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
@@ -14,7 +15,11 @@
         <div class="header__section">
             <div class="search">
                 <input type="search" id="searcher">
-                <button form="searcher">🔍</button>
+                <button form="searcher">
+                    <svg class="icon" xmlns="http://www.w3.org/2000/svg" id="Isolation_Mode" data-name="Isolation Mode" viewBox="0 0 24 24" width="512" height="512" fill="currentColor">
+  <path d="M18.9,16.776A10.539,10.539,0,1,0,16.776,18.9l5.1,5.1L24,21.88ZM10.5,18A7.5,7.5,0,1,1,18,10.5,7.507,7.507,0,0,1,10.5,18Z"/>
+</svg>
+                </button>
             </div>
             <div>
                 <a href="#favorites">Favoritos</a>
@@ -27,7 +32,11 @@
         </div>
 
         <div class="title">
-            <h1>Lana <br> <span>&</span> Lino</h1>
+            <h1>Lana 
+            <svg class="icon" xmlns="http://www.w3.org/2000/svg" id="Layer_1" data-name="Layer 1" viewBox="0 0 24 24" width="30" height="30">
+  <path fill="currentColor" d="m21.5,4.5c-1.381,0-2.5,1.119-2.5,2.5,0,.142.019.279.042.415l-2.91,2.116c-.62-.807-1.369-1.507-2.222-2.065l1.369-2.489c.074.007.146.022.222.022,1.381,0,2.5-1.119,2.5-2.5s-1.119-2.5-2.5-2.5-2.5,1.119-2.5,2.5c0,.573.201,1.095.525,1.516l-1.404,2.553c-.974-.362-2.022-.569-3.121-.569C4.037,6,0,10.038,0,15s4.037,9,9,9,9-4.037,9-9c0-1.34-.302-2.608-.83-3.751l2.966-2.157c.393.256.86.408,1.364.408,1.381,0,2.5-1.119,2.5-2.5s-1.119-2.5-2.5-2.5Zm-12.273,17.496c-.016,0-.281-.016-.39-.057-3.522-1.317-6.105-4.559-6.461-8.443-.04-.437.218-1.31.224-1.324.398-.898,1.728-.611,1.724.371,0,3.167,2.188,6.262,5.25,7.644.906.409.648,1.776-.346,1.809Zm6.39-7.888c-.794,1.055-1.856,2.032-3.073,2.826.492.127,1.075.222,1.641.289.717.085,1.115.891.73,1.502-.004.006-.008.012-.012.019-.21.331-.597.506-.987.461-4.782-.544-7.593-3.138-7.593-7.126,0-1.125.205-2.232.596-3.276.132-.353.451-.602.826-.64.01,0,.02-.002.03-.003.72-.07,1.275.643,1.021,1.32-.337.896-.498,1.851-.469,2.818.006.003.006.003.011.007,1.293-.656,2.398-1.634,3.222-2.827.31-.448.928-.559,1.378-.252.006.004.011.008.017.011.46.316.575.943.256,1.401-1.107,1.589-2.63,2.86-4.396,3.66.344.686.846,1.221,1.441,1.634,1.386-.679,2.81-1.87,3.797-3.069.511-.621,1.516-.394,1.718.384.002.008.004.016.006.025.074.289.019.598-.161.836Z"/>
+</svg>
+            <br> <span>&</span> Lino</h1>
         </div>
 
         <div class="header__section">
@@ -39,7 +48,15 @@
                     </li>
 
                     <li>
-                        <a href="#carrito">🛒</a>
+                        <a href="#carrito">
+                            <svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+  <g id="_01_align_center" data-name="01 align center" fill="currentColor">
+    <path d="M24,3H4.242L4.2,2.649A3,3,0,0,0,1.222,0H0V2H1.222a1,1,0,0,1,.993.883L3.8,16.351A3,3,0,0,0,6.778,19H20V17H6.778a1,1,0,0,1-.993-.884L5.654,15H21.836ZM20.164,13H5.419L4.478,5H21.607Z"/>
+    <circle cx="7" cy="22" r="2"/>
+    <circle cx="17" cy="22" r="2"/>
+  </g>
+</svg>
+                        </a>
                     </li>
 
                     <li>
@@ -73,15 +90,28 @@
         </div>
         <div class="footer__section">
             <h2>Redes Sociales</h2>
-            <ul>
+            <ul class="social">
                 <li>
-                    <a href="http://instagram.com" target="_blank" rel="noopener noreferrer">Instagram</a>
+                    <a href="http://instagram.com" target="_blank" rel="noopener noreferrer"><svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+  <g fill="currentColor">
+    <path d="M12,2.162c3.204,0,3.584,0.012,4.849,0.07c1.308,0.06,2.655,0.358,3.608,1.311c0.962,0.962,1.251,2.296,1.311,3.608   c0.058,1.265,0.07,1.645,0.07,4.849c0,3.204-0.012,3.584-0.07,4.849c-0.059,1.301-0.364,2.661-1.311,3.608   c-0.962,0.962-2.295,1.251-3.608,1.311c-1.265,0.058-1.645,0.07-4.849,0.07s-3.584-0.012-4.849-0.07   c-1.291-0.059-2.669-0.371-3.608-1.311c-0.957-0.957-1.251-2.304-1.311-3.608c-0.058-1.265-0.07-1.645-0.07-4.849   c0-3.204,0.012-3.584,0.07-4.849c0.059-1.296,0.367-2.664,1.311-3.608c0.96-0.96,2.299-1.251,3.608-1.311   C8.416,2.174,8.796,2.162,12,2.162 M12,0C8.741,0,8.332,0.014,7.052,0.072C5.197,0.157,3.355,0.673,2.014,2.014   C0.668,3.36,0.157,5.198,0.072,7.052C0.014,8.332,0,8.741,0,12c0,3.259,0.014,3.668,0.072,4.948c0.085,1.853,0.603,3.7,1.942,5.038   c1.345,1.345,3.186,1.857,5.038,1.942C8.332,23.986,8.741,24,12,24c3.259,0,3.668-0.014,4.948-0.072   c1.854-0.085,3.698-0.602,5.038-1.942c1.347-1.347,1.857-3.184,1.942-5.038C23.986,15.668,24,15.259,24,12   c0-3.259-0.014-3.668-0.072-4.948c-0.085-1.855-0.602-3.698-1.942-5.038c-1.343-1.343-3.189-1.858-5.038-1.942   C15.668,0.014,15.259,0,12,0z"/>
+    <path d="M12,5.838c-3.403,0-6.162,2.759-6.162,6.162c0,3.403,2.759,6.162,6.162,6.162s6.162-2.759,6.162-6.162   C18.162,8.597,15.403,5.838,12,5.838z M12,16c-2.209,0-4-1.791-4-4s1.791-4,4-4s4,1.791,4,4S14.209,16,12,16z"/>
+    <circle cx="18.406" cy="5.594" r="1.44"/>
+  </g>
+</svg> Instagram</a>
                 </li>
                 <li>
-                    <a href="http://facebook.com" target="_blank" rel="noopener noreferrer">Facebook</a>
+                    <a href="http://facebook.com" target="_blank" rel="noopener noreferrer"><svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+  <path d="M24,12.073c0,5.989-4.394,10.954-10.13,11.855v-8.363h2.789l0.531-3.46H13.87V9.86
+           c0-0.947,0.464-1.869,1.95-1.869h1.509V5.045c0,0-1.37-0.234-2.679-0.234c-2.734,0-4.52,1.657-4.52,4.656v2.637H7.091v3.46
+           h3.039v8.363C4.395,23.025,0,18.061,0,12.073c0-6.627,5.373-12,12-12S24,5.445,24,12.073z" fill="currentColor"/>
+</svg> Facebook</a>
                 </li>
                 <li>
-                    <a href="http://x.com" target="_blank" rel="noopener noreferrer">X</a>
+                    <a href="http://x.com" target="_blank" rel="noopener noreferrer"><svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+  <polygon fill="currentColor" points="6.861 6.159 15.737 17.764 17.097 17.764 8.322 6.159 6.861 6.159"/>
+  <path fill="currentColor" d="M12,0C5.373,0,0,5.373,0,12s5.373,12,12,12,12-5.373,12-12S18.627,0,12,0Zm3.063,19.232l-3.87-5.055-4.422,5.055H4.313l5.733-6.554-6.046-7.91h5.062l3.494,4.621,4.043-4.621h2.455l-5.361,6.126,6.307,8.337h-4.937Z"/>
+</svg> X</a>
                 </li>
             </ul>
         </div>
