Add LogIn function

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                 <label for="phonenumber">Teléfono:</label>
                 <input type="tel" name="phonenumber" id="register-user-phonenumber">
 
-                <label for="mail">Apellido:</label>
+                <label for="mail">Mail:</label>
                 <input type="email" name="mail" id="register-user-email">
 
                 <label for="pass">Contraseña:</label>
