--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 </button>
             </div>
             <div>
-                <a href="#favorites">Favoritos</a>
+                <a href="#favorites" id="btn-favorites">Favoritos</a>
             </div>
             <div>
                 <select name="categories" id="categories">
@@ -43,28 +43,36 @@
             <nav>
                 <ul>
                     <li>
-                        <button popovertarget="log-in">Iniciar Sesión</button>
-                        <button popovertarget="register">Registrarse</button>
-                    </li>
-
-                    <li>
-                        <a href="#carrito">
+                        <a href="#carrito" id="cart">
                             <svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-  <g id="_01_align_center" data-name="01 align center" fill="currentColor">
+    <g id="_01_align_center" data-name="01 align center" fill="currentColor">
     <path d="M24,3H4.242L4.2,2.649A3,3,0,0,0,1.222,0H0V2H1.222a1,1,0,0,1,.993.883L3.8,16.351A3,3,0,0,0,6.778,19H20V17H6.778a1,1,0,0,1-.993-.884L5.654,15H21.836ZM20.164,13H5.419L4.478,5H21.607Z"/>
     <circle cx="7" cy="22" r="2"/>
     <circle cx="17" cy="22" r="2"/>
-  </g>
-</svg>
+    </g>
+    </svg>
                         </a>
+                    </li>
+
+                    <li>
+                        <button id="btn-to-logIn" popovertarget="log-in">Iniciar Sesión</button>
+                        <button id="btn-to-register" popovertarget="register">Registrarse</button>
                     </li>
 
                     <li>
                         <button onclick="toggleTheme()">Cambiar tema</button>
                     </li>
 
+                    <li>                       
+                        <a href="#gestionar" id="btn-gestionar-productos" style="display: none;">Gestionar Productos</a>
+                    </li>
+                    
                     <li>
                         <a href="#user"><span id="username">Usuario</span></a>
+                    </li>
+
+                    <li>
+                        <button id="btn-logout" style="display: none;">Cerrar sesión</button>
                     </li>
                 </ul>
             </nav>
