Add function to get and show the products, and get categories to show with the products

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <option value="categoria">Categoría</option>
             <option value="color">Color</option>
         </select>
-        <section id="products"></section>
+        <section id="products" class="product-container"></section>
     </main>
     <footer>
         <div class="footer__section">
