--- a/index.html
+++ b/index.html
@@ -12,79 +12,86 @@
 </head>
 <body>
     <header>
-        <div class="header__section">
-            <div class="search">
-                <input type="search" id="searcher">
-                <button form="searcher">
-                    <svg class="icon" xmlns="http://www.w3.org/2000/svg" id="Isolation_Mode" data-name="Isolation Mode" viewBox="0 0 24 24" width="512" height="512" fill="currentColor">
-  <path d="M18.9,16.776A10.539,10.539,0,1,0,16.776,18.9l5.1,5.1L24,21.88ZM10.5,18A7.5,7.5,0,1,1,18,10.5,7.507,7.507,0,0,1,10.5,18Z"/>
-</svg>
-                </button>
+        <div class="header__main">
+            <div class="header__section">
+                <div class="search">
+                    <input type="search" id="searcher">
+                    <button form="searcher">
+                        <svg class="icon" xmlns="http://www.w3.org/2000/svg" id="Isolation_Mode" data-name="Isolation Mode" viewBox="0 0 24 24" width="512" height="512" fill="currentColor">
+                <path d="M18.9,16.776A10.539,10.539,0,1,0,16.776,18.9l5.1,5.1L24,21.88ZM10.5,18A7.5,7.5,0,1,1,18,10.5,7.507,7.507,0,0,1,10.5,18Z"/>
+                </svg>
+                    </button>
+                </div>
+                <div>
+                    <a href="#favorites" id="btn-favorites">Favoritos</a>
+                </div>
+            </div>
+
+            <div class="title">
+                <h1>Lana 
+                <svg class="icon" xmlns="http://www.w3.org/2000/svg" id="Layer_1" data-name="Layer 1" viewBox="0 0 24 24" width="30" height="30">
+            <path fill="currentColor" d="m21.5,4.5c-1.381,0-2.5,1.119-2.5,2.5,0,.142.019.279.042.415l-2.91,2.116c-.62-.807-1.369-1.507-2.222-2.065l1.369-2.489c.074.007.146.022.222.022,1.381,0,2.5-1.119,2.5-2.5s-1.119-2.5-2.5-2.5-2.5,1.119-2.5,2.5c0,.573.201,1.095.525,1.516l-1.404,2.553c-.974-.362-2.022-.569-3.121-.569C4.037,6,0,10.038,0,15s4.037,9,9,9,9-4.037,9-9c0-1.34-.302-2.608-.83-3.751l2.966-2.157c.393.256.86.408,1.364.408,1.381,0,2.5-1.119,2.5-2.5s-1.119-2.5-2.5-2.5Zm-12.273,17.496c-.016,0-.281-.016-.39-.057-3.522-1.317-6.105-4.559-6.461-8.443-.04-.437.218-1.31.224-1.324.398-.898,1.728-.611,1.724.371,0,3.167,2.188,6.262,5.25,7.644.906.409.648,1.776-.346,1.809Zm6.39-7.888c-.794,1.055-1.856,2.032-3.073,2.826.492.127,1.075.222,1.641.289.717.085,1.115.891.73,1.502-.004.006-.008.012-.012.019-.21.331-.597.506-.987.461-4.782-.544-7.593-3.138-7.593-7.126,0-1.125.205-2.232.596-3.276.132-.353.451-.602.826-.64.01,0,.02-.002.03-.003.72-.07,1.275.643,1.021,1.32-.337.896-.498,1.851-.469,2.818.006.003.006.003.011.007,1.293-.656,2.398-1.634,3.222-2.827.31-.448.928-.559,1.378-.252.006.004.011.008.017.011.46.316.575.943.256,1.401-1.107,1.589-2.63,2.86-4.396,3.66.344.686.846,1.221,1.441,1.634,1.386-.679,2.81-1.87,3.797-3.069.511-.621,1.516-.394,1.718.384.002.008.004.016.006.025.074.289.019.598-.161.836Z"/>
+            </svg>
+                <br> <span>&</span> Lino</h1>
+            </div>
+
+            <div class="header__section">
+                <nav>
+                    <ul>
+                        <li>
+                            <a href="#carrito" id="cart">
+                                <svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+            <g id="_01_align_center" data-name="01 align center" fill="currentColor">
+            <path d="M24,3H4.242L4.2,2.649A3,3,0,0,0,1.222,0H0V2H1.222a1,1,0,0,1,.993.883L3.8,16.351A3,3,0,0,0,6.778,19H20V17H6.778a1,1,0,0,1-.993-.884L5.654,15H21.836ZM20.164,13H5.419L4.478,5H21.607Z"/>
+            <circle cx="7" cy="22" r="2"/>
+            <circle cx="17" cy="22" r="2"/>
+            </g>
+            </svg>
+                            </a>
+                        </li>
+
+                        <li>
+                            <button id="btn-to-logIn" popovertarget="log-in">Iniciar Sesión</button>
+                            <button id="btn-to-register" popovertarget="register">Registrarse</button>
+                        </li>
+
+                        <li>
+                            <button onclick="toggleTheme()">Cambiar tema</button>
+                        </li>
+
+                        <li>                       
+                            <a href="#gestionar" id="btn-gestionar-productos" style="display: none;">Gestionar Productos</a>
+                        </li>
+                        
+                        <li>
+                            <a href="#user"><span id="username">Usuario</span></a>
+                        </li>
+
+                        <li>
+                            <button id="btn-logout" style="display: none;">Cerrar sesión</button>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+
+        <div class="filters">
+            <div>
+                <select name="categories" id="categories-filter">
+                    <option value="all" selected>Seleccione una categoria</option>
+                </select>
             </div>
             <div>
-                <a href="#favorites" id="btn-favorites">Favoritos</a>
-            </div>
-            <div>
-                <select name="categories" id="categories">
-                    <option value="" disabled selected>Seleccione una categoria</option>
+                <select name="filter" id="gender-filter">
+                    <option value="all">Todos los géneros</option>
+                    <option value="Masculino">Masculino</option>
+                    <option value="Femenino">Femenino</option>
+                    <option value="Unisex">Unisex</option>
                 </select>
             </div>
         </div>
-
-        <div class="title">
-            <h1>Lana 
-            <svg class="icon" xmlns="http://www.w3.org/2000/svg" id="Layer_1" data-name="Layer 1" viewBox="0 0 24 24" width="30" height="30">
-  <path fill="currentColor" d="m21.5,4.5c-1.381,0-2.5,1.119-2.5,2.5,0,.142.019.279.042.415l-2.91,2.116c-.62-.807-1.369-1.507-2.222-2.065l1.369-2.489c.074.007.146.022.222.022,1.381,0,2.5-1.119,2.5-2.5s-1.119-2.5-2.5-2.5-2.5,1.119-2.5,2.5c0,.573.201,1.095.525,1.516l-1.404,2.553c-.974-.362-2.022-.569-3.121-.569C4.037,6,0,10.038,0,15s4.037,9,9,9,9-4.037,9-9c0-1.34-.302-2.608-.83-3.751l2.966-2.157c.393.256.86.408,1.364.408,1.381,0,2.5-1.119,2.5-2.5s-1.119-2.5-2.5-2.5Zm-12.273,17.496c-.016,0-.281-.016-.39-.057-3.522-1.317-6.105-4.559-6.461-8.443-.04-.437.218-1.31.224-1.324.398-.898,1.728-.611,1.724.371,0,3.167,2.188,6.262,5.25,7.644.906.409.648,1.776-.346,1.809Zm6.39-7.888c-.794,1.055-1.856,2.032-3.073,2.826.492.127,1.075.222,1.641.289.717.085,1.115.891.73,1.502-.004.006-.008.012-.012.019-.21.331-.597.506-.987.461-4.782-.544-7.593-3.138-7.593-7.126,0-1.125.205-2.232.596-3.276.132-.353.451-.602.826-.64.01,0,.02-.002.03-.003.72-.07,1.275.643,1.021,1.32-.337.896-.498,1.851-.469,2.818.006.003.006.003.011.007,1.293-.656,2.398-1.634,3.222-2.827.31-.448.928-.559,1.378-.252.006.004.011.008.017.011.46.316.575.943.256,1.401-1.107,1.589-2.63,2.86-4.396,3.66.344.686.846,1.221,1.441,1.634,1.386-.679,2.81-1.87,3.797-3.069.511-.621,1.516-.394,1.718.384.002.008.004.016.006.025.074.289.019.598-.161.836Z"/>
-</svg>
-            <br> <span>&</span> Lino</h1>
-        </div>
-
-        <div class="header__section">
-            <nav>
-                <ul>
-                    <li>
-                        <a href="#carrito" id="cart">
-                            <svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-    <g id="_01_align_center" data-name="01 align center" fill="currentColor">
-    <path d="M24,3H4.242L4.2,2.649A3,3,0,0,0,1.222,0H0V2H1.222a1,1,0,0,1,.993.883L3.8,16.351A3,3,0,0,0,6.778,19H20V17H6.778a1,1,0,0,1-.993-.884L5.654,15H21.836ZM20.164,13H5.419L4.478,5H21.607Z"/>
-    <circle cx="7" cy="22" r="2"/>
-    <circle cx="17" cy="22" r="2"/>
-    </g>
-    </svg>
-                        </a>
-                    </li>
-
-                    <li>
-                        <button id="btn-to-logIn" popovertarget="log-in">Iniciar Sesión</button>
-                        <button id="btn-to-register" popovertarget="register">Registrarse</button>
-                    </li>
-
-                    <li>
-                        <button onclick="toggleTheme()">Cambiar tema</button>
-                    </li>
-
-                    <li>                       
-                        <a href="#gestionar" id="btn-gestionar-productos" style="display: none;">Gestionar Productos</a>
-                    </li>
-                    
-                    <li>
-                        <a href="#user"><span id="username">Usuario</span></a>
-                    </li>
-
-                    <li>
-                        <button id="btn-logout" style="display: none;">Cerrar sesión</button>
-                    </li>
-                </ul>
-            </nav>
-        </div>
     </header>
     <main>
-        <select name="filter" id="products-filter">
-            <option value="" selected>Filtro</option>
-            <option value="genero">Género</option>
-            <option value="categoria">Categoría</option>
-            <option value="color">Color</option>
-        </select>
         <section id="products" class="product-container"></section>
     </main>
     <footer>
