--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="./media/lana-&-lino-icon.svg" type="image/x-icon">
+    <link rel="shortcut icon" href="../media/lana-&-lino-icon.svg" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/styles/style.css">
+    <link rel="stylesheet" href="../styles/style.css">
     <title>Lana & Lino</title>
 </head>
 <body>
@@ -35,64 +35,11 @@
                 <br> <span>&</span> Lino</h1>
             </div>
 
-            <div class="header__section">
-                <nav>
-                    <ul>
-                        <li>
-                            <a href="./pages/carrito.html" id="cart">
-                                <svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-            <g id="_01_align_center" data-name="01 align center" fill="currentColor">
-            <path d="M24,3H4.242L4.2,2.649A3,3,0,0,0,1.222,0H0V2H1.222a1,1,0,0,1,.993.883L3.8,16.351A3,3,0,0,0,6.778,19H20V17H6.778a1,1,0,0,1-.993-.884L5.654,15H21.836ZM20.164,13H5.419L4.478,5H21.607Z"/>
-            <circle cx="7" cy="22" r="2"/>
-            <circle cx="17" cy="22" r="2"/>
-            </g>
-            </svg>
-                            </a>
-                        </li>
-
-                        <li>
-                            <button id="btn-to-logIn" popovertarget="log-in">Iniciar Sesión</button>
-                            <button id="btn-to-register" popovertarget="register">Registrarse</button>
-                        </li>
-
-                        <li>
-                            <button onclick="toggleTheme()">Cambiar tema</button>
-                        </li>
-
-                        <li>                       
-                            <a href="#gestionar" id="btn-gestionar-productos" style="display: none;">Gestionar Productos</a>
-                        </li>
-                        
-                        <li>
-                            <a href="#user"><span id="username">Usuario</span></a>
-                        </li>
-
-                        <li>
-                            <button id="btn-logout" style="display: none;">Cerrar sesión</button>
-                        </li>
-                    </ul>
-                </nav>
-            </div>
-        </div>
-
-        <div class="filters">
-            <div>
-                <select name="categories" id="categories-filter">
-                    <option value="all" selected>Seleccione una categoria</option>
-                </select>
-            </div>
-            <div>
-                <select name="filter" id="gender-filter">
-                    <option value="all">Todos los géneros</option>
-                    <option value="Masculino">Masculino</option>
-                    <option value="Femenino">Femenino</option>
-                    <option value="Unisex">Unisex</option>
-                </select>
-            </div>
-        </div>
+            <a href="/">Ir al Inicio</a>
     </header>
     <main>
-        <section id="products" class="product-container"></section>
+        <section id="carrito-items" class="product-container"></section>
+        <div id="carrito-total"></div>
     </main>
     <footer>
         <div class="footer__section">
@@ -139,72 +86,8 @@
         </div>
     </footer>
 
-    <dialog popover id="log-in">
-        <form id="login-form">
-            <fieldset>
-                <legend>Iniciar Sesión</legend>
+    <script type="module" src="../js/getCart.js"></script>
 
-                <label for="user-mail">Correo Electrónico</label>
-                <input type="email" name="user-mail" id="user-email">
-
-                <label for="user-pass">Contraseña</label>
-                <input type="password" name="user-pass" id="user-password">
-            </fieldset>
-
-            <button type="submit" class="big">
-                Enviar
-            </button>
-        </form>
-
-        <div>
-            <p>¿No tienes una cuenta? 
-                <a onclick="document.getElementById('register').showModal(),
-                                document.getElementById('log-in').close()">
-                Registrarse</a>
-            </p>
-        </div>
-    </dialog>
-
-    <dialog popover id="register">
-        <form id="register-form">
-            <fieldset>
-                <legend>Registrarse</legend>
-
-                <label for="name">Nombre:</label>
-                <input type="text" name="name" id="register-user-name">
-
-                <label for="surname">Apellido:</label>
-                <input type="text" name="surname" id="register-user-surname">
-
-                <label for="direction">Dirección:</label>
-                <input type="text" name="direction" id="register-user-direction">
-
-                <label for="phonenumber">Teléfono:</label>
-                <input type="tel" name="phonenumber" id="register-user-phonenumber">
-
-                <label for="mail">Mail:</label>
-                <input type="email" name="mail" id="register-user-email">
-
-                <label for="pass">Contraseña:</label>
-                <input type="password" name="pass" id="register-user-password">
-
-                <div id="message-container"></div>
-            </fieldset>
-
-            <button type="submit" class="big" id="register-button">
-                Enviar
-            </button>
-        </form>
-        <div>
-            <p>¿Ya tienes una cuenta? 
-            <a onclick="document.getElementById('log-in').showModal(),
-                            document.getElementById('register').close()">
-            Inícia Sesión</a>
-            </p>
-        </div>
-    </dialog>
-
-    <script src="./js/index.js" type="module"></script>
     <script>
         function toggleTheme() {
             const html = document.documentElement;
