Add pay function

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                         </li>
 
                         <li>                       
-                            <a href="#gestionar" id="btn-gestionar-productos" style="display: none;">Gestionar Productos</a>
+                            <a href="/pages/gestion.html" id="btn-gestionar-productos" style="display: none;">Gestionar Productos</a>
                         </li>
                         
                         <li>
